# digitakt-midi-mcp

./: .gitignore  README.md  nrpn_constants.py  parameter_map.py  pyproject.toml  requirements.txt  server.py  test_midi.py  test_pattern_tools.py  test_save_melody.py  test_transport.py  verify_cc_mappings.py
.claude/: settings.local.json
analysis/: analyze_sysex.py
tests/: test_automation_looping.py  test_delayed_start.py  test_filter_sweeps.py  test_track_triggers.py  test_tracks_and_melody.py  verify_cc_mappings.py
