[project]
name = "digitakt-midi-mcp"
version = "0.1.0"
description = "MCP Server for controlling Elektron Digitakt II via MIDI"
authors = [{name = "Your Name"}]
dependencies = [
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "mcp>=0.9.0"
]
requires-python = ">=3.10"

[project.scripts]
digitakt-midi-server = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"
